:sparkles: feat: Finalizando o header

--- a/index.html
+++ b/index.html
@@ -9,14 +9,13 @@
 </head>
 
 <body>
-  <header>
+  <header class="header">
     <img src="img/marca.svg" alt="">
     <nav>
-      <ul>
-        <li><a href="#experiencia"></a></li>
-        <li><a href="#experiencia"></a></li>
-        <li><a href="#experiencia"></a></li>
-        <li><a href="#experiencia"></a></li>
+      <ul class="header-menu">
+        <li><a href="#experiencia">Experiência</a></li>
+        <li><a href="#formacao">Formação</a></li>
+        <li><a href="#contato">Contato</a></li>
       </ul>
     </nav>
   </header>
