--- a/index.html
+++ b/index.html
@@ -19,6 +19,14 @@
       </ul>
     </nav>
   </header>
+
+  <main class="introducao">
+    <img src="img/perfil.jpg" alt="Lobo Cinza">
+    <div>
+      <h1>Desenvolvedor<br> Front End &<br> UX/UI Designer</h1>
+      <p>Localizado em Belo Horizonte 🚞</p>
+    </div>
+  </main>
 </body>
 
 </html>
